--- a/Weather-Native/index.html
+++ b/Weather-Native/index.html
@@ -18,7 +18,7 @@
         <!--=============== HEADER ===============-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav_logo">NguWah</a>
+                <a href="#" class="nav_logo">Ngu Wah</a>
                 <div class="nav_menu">
                     <ul class="nav_list">
                         <li class="nav_item">
@@ -62,7 +62,9 @@
                         <span class="home_greeting"> Hello, I'm</span>
                         <h1 class="home_name">Ngu Wah Khaing</h1>
                         <h3 class="home_education">Frontend UI Developer</h3>
-
+                        <h1> Hello</h1>
+                        <h2> Scarlett</h2>
+                        <h3> Change the World</h3>
                         <div class="home_buttons">
                             <a download="" href="assets/pdf/Resume-NWK.pdf" class="button button--ghost">
                                 Download CV
