--- a/Weather-Native/index.html
+++ b/Weather-Native/index.html
@@ -62,6 +62,7 @@
                         <span class="home_greeting"> Hello, I'm</span>
                         <h1 class="home_name">Ngu Wah Khaing</h1>
                         <h3 class="home_education">Frontend UI Developer</h3>
+                        <h2> I'm Frontend Developer with 5 years experience in software development</h2>
 
                         <div class="home_buttons">
                             <a download="" href="assets/pdf/Resume-NWK.pdf" class="button button--ghost">
